[package]
name = "istor"
version = "0.1.1"
edition = "2021"
description = "Check if an IP is a tor exit node"
license = "MIT"
authors = ["Octalbyte <octalbyte0o52@protonmail.com"]
repository = "https://github.com/onionstuff/is-tor-rs"
cargo-features = ["edition2021"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipaddress = "0.1.1"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.0.9", features = ["derive"] }

[lib]
name = "istor"
path = "src/lib.rs"

[[bin]]
name = "istor"
path = "src/bin/main.rs"
