[package]
name = "istor"
version = "0.1.2"
edition = "2018"
description = "Check if an IP is a tor exit node"
license = "MIT"
authors = ["Octalbyte <octalbyte0o52@protonmail.com"]
repository = "https://github.com/onionstuff/is-tor-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
clap = { version = "3.0.9", features = ["derive"] }

[lib]
name = "istor"
path = "src/lib.rs"

[[bin]]
name = "istor"
path = "src/bin/main.rs"
